# artificial-intelligence-ontology

./: .gitignore  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  aio-base.json  aio-base.obo  aio-base.owl  aio-full.json  aio-full.obo  aio-full.owl  aio-robot-measure.tsv  aio-src.csv  aio-to-cso.sssom_full.tsv  aio.db  aio.dot  aio.json  aio.obo  aio.owl  aio_summary_robot.txt  branch-counts.rq  deep-learning-ontology-base.obo  deep-learning-ontology-full.obo  deep-learning-ontology.json  deep-learning-ontology.obo  deep-learning-ontology.owl  index.html  is_a-edge-counts.rq  issue_template.md  mkdocs.yaml  pyproject.toml  sitemap.xml  synonym-counts.rq  table-2.Makefile
annotate/: AIO_only.sh  PWC_AIO_counts.sh  PWC_AIO_counts__casesense.sh  PWC_AIO_general_counts.sh  PWC_AIO_terms_wcounts.txt  analyze_PWC_annotations.ipynb  children_for_branches.sh  methods.json  methods_reformat.txt  methods_reformat_annotate.out  methods_reformat_annotate_AIOonly.txt  methods_reformat_area.txt  methods_reformat_area_annotate.out  methods_reformat_area_annotate_AIOonly.txt  methods_reformat_collection.txt  methods_reformat_collection_annotate.out  methods_reformat_collection_annotate_AIOonly.txt  oak_swo_AIO.txt  reformat.sh  run.sh  run_all.sh
cite/: index.html
contributing/: index.html
docs/: cite.md  contributing.md  index.md
imports/: swo_import.owl
mappings/: aio-to-edam.sssom.tsv  aio-to-obiws.sssom.tsv  aio-to-obiws.sssom_full.tsv  process.sh  run.sh
odk-workflows/: index.html
prompts/: Claude_Aristotelian_definitions.txt  (+2 more)
release-diffs/: index.html
(+125 files in other folders)
